force-app/main/default/objects/Purchase_order_line__c/Purchase_order_line__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Line</label>
    <nameField>
        <displayFormat>POL-{0000000}</displayFormat>
        <label>Purchase Order Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>