force-app/main/default/objects/Purchase_order_line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product.</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Purchase_order_line</relationshipName>
    <type>Lookup</type>
</CustomField>