force-app/main/default/objects/Purchase_order_line__c/fields/Requested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Quantity__c</fullName>
    <label>Requested Quantity</label>
    <summarizedField>PRLtoPOL__c.Qty_in_PRL__c</summarizedField>
    <summaryFilterItems>
        <field>PRLtoPOL__c.PRL_Status__c</field>
        <operation>equals</operation>
        <value>Converted to PO</value>
    </summaryFilterItems>
    <summaryForeignKey>PRLtoPOL__c.Purchase_Order_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>