force-app/main/default/objects/Purchase_order_line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Note__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>